fixed display on right

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,7 +41,7 @@ header {
             top: 64px;
             width: 280px;
             // height: 100%;
-            display: block;
+            display: none;
             text-align: left;
             margin: 0;
             padding: 10px 0 10px 0;
@@ -49,10 +49,12 @@ header {
         }
     }
     .menuClass {
+        display: block;
         right: 0;
         transition: 0.4s ease-in-out;
     }
     .menu_icon {
+        display: none;
         position: relative;
         right: -280px;
         top: 9px;
