Added default page route component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <header>
-    <!-- <img src="../assets/images/Header.jpg" alt="Lok-Jigyasa-header-image" class="header-image"> -->
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-3 col-3">
@@ -26,4 +25,6 @@
         <h5 class="sub-header-text">"कामये दुःख: तप्तानाम प्राणिनाम आर्तिनाशनम"</h5>
     </div>
 </header>
-<router-outlet></router-outlet>
+<div style="position: relative">
+    <router-outlet></router-outlet>
+</div>
