added multiple components

--- a/src/app/default/default.component.html
+++ b/src/app/default/default.component.html
@@ -1,1 +1,4 @@
-<p>default works!</p>
+<div class="gap"><app-about></app-about></div>
+<div class="gap"><app-wrapper-post-events></app-wrapper-post-events></div>
+<div class="gap"><app-parichay></app-parichay></div>
+<div class="gap"><app-contact-us></app-contact-us></div>
