--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+}
+
 header {
     background-image: url("./../assets/images/Header.jpg");
     background-size: cover;
@@ -72,3 +81,11 @@ header {
     }
 
 }
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+    background-color: black;
+}
+
