width fixes on about-us components

--- a/src/app/default/about/about.component.html
+++ b/src/app/default/about/about.component.html
@@ -6,8 +6,8 @@
         </span>
     </div>
     <div class="row">
-        <span class="col-lg-1 col-md-0 col-sm-0"></span>
-        <span class="col-lg-10 col-md-12 col-sm-12">कोरोना महामारी के बीच जिंदगी और मानवता के सामने एक बड़ी चुनौती सामने आयी।
+        <!-- <span class="col-lg-1 col-md-0 col-sm-0"></span> -->
+        <span>कोरोना महामारी के बीच जिंदगी और मानवता के सामने एक बड़ी चुनौती सामने आयी।
             सबकुछ होते हुए ,भरा पूरा परिवार के
             बीच भी लोग अपने आपको असुरक्षित महसूस कर रहे थे। खासकर उनलोगों के लिए जीवन बचाना सबसे बड़ी चुनौती थी जो अपने
             गाँव से दूर शहरों में रोजी रोटी के लिए जद्दोजेहद कर रहे थे। आपदा की इस मुश्किल चुनौती के बीच टेक्नोलॉजी और
