added contact uo component

--- a/src/app/default/default.component.html
+++ b/src/app/default/default.component.html
@@ -1,4 +1,4 @@
 <div class="gap"><app-about></app-about></div>
 <div class="gap"><app-wrapper-post-events></app-wrapper-post-events></div>
-<div class="gap"><app-parichay></app-parichay></div>
-<div class="gap"><app-contact-us></app-contact-us></div>
+<!-- <div class="gap"><app-parichay></app-parichay></div> this is under development yet-->
+<div class="gap center"><app-contact-us></app-contact-us></div>
