--- a/src/app/default/contact-us/contact-us.component.html
+++ b/src/app/default/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="content">
-        <div class="left-side">
+        <!-- <div class="left-side">
             <div class="address details">
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="topic">Address</div>
@@ -19,24 +19,22 @@
                 <div class="text-one">codinglab@gmail.com</div>
                 <div class="text-two">info.codinglab@gmail.com</div>
             </div>
-        </div>
+        </div> -->
         <div class="right-side">
-            <div class="topic-text">Send us a message</div>
-            <p>If you have any work from me or any types of quries related to my tutorial, you can send me message
-                from
-                here. It's my pleasure to help you.</p>
+            <div class="topic-text">हमसे जुड़े</div>
+            <p>इस मुहीम को आगे बढ़ने में हम आपके साथ और सुझाव की आवश्यकता है. हमसे जुड़े!</p>
             <form action="#">
                 <div class="input-box">
-                    <input type="text" placeholder="Enter your name">
+                    <input type="text" placeholder="आपका नाम">
                 </div>
                 <div class="input-box">
-                    <input type="text" placeholder="Enter your email">
+                    <input type="text" placeholder="अपना email अंकित करे">
                 </div>
-                <div class="input-box message-box">
+                <textarea class="input-box message-box">
 
-                </div>
+                </textarea>
                 <div class="button">
-                    <input type="button" value="Send Now">
+                    <input type="button" value="भेजें">
                 </div>
             </form>
         </div>
