--- a/src/app/default/contact-us/contact-us.component.scss
+++ b/src/app/default/contact-us/contact-us.component.scss
@@ -14,10 +14,11 @@ body{
 }
 .container{
 //   width: 85%;
-  background: #fff;
-  border-radius: 6px;
-  padding: 20px 60px 30px 40px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  // background: #fff;
+  // border-radius: 6px;s
+  // padding: 20px 60px 30px 40px;
+  padding: 20px;
+  // box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   text-align: left;
 }
 .container .content{
@@ -64,8 +65,8 @@ body{
   color: #afafb6;
 }
 .container .content .right-side{
-  width: 75%;
-  margin-left: 75px;
+  width: 100%;
+  // margin-left: 75px;
 }
 .content .right-side .topic-text{
   font-size: 23px;
@@ -120,8 +121,8 @@ body{
     padding: 30px 40px 40px 35px ;
   }
   .container .content .right-side{
-   width: 75%;
-   margin-left: 55px;
+   width: 100%;
+  //  margin-left: 55px;
 }
 }
 @media (max-width: 820px) {
