--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
                             <span></span>
                         </div>
                         <div class="menu" [class.menuClass]="menuVariable">
-                            <ul>About Us</ul>
-                            <ul>Posts</ul>
+                            <ul (click)="clicked(1)">About Us</ul>
+                            <ul (click)="clicked(2)">Posts</ul>
                             <ul>Events</ul>
                             <ul>Mission</ul>
                             <ul>Support Us</ul>
