--- a/src/app/posts/full-post/full-post.component.html
+++ b/src/app/posts/full-post/full-post.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="card">
-        <app-post-card [id]="id"></app-post-card>
+        <app-post-card [id]="id" [fullPostsView]="fullPostsView"></app-post-card>
         <div class="no-margin row">
             <div class="col-1"></div>
             <div class="card internal post-comment col-11">
@@ -28,69 +28,20 @@
                 </div>
             </div>
         </div>
-        <div class="comment">
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="comments col-11">
-                    <div class="d-flex justify-content-between">
-                        <h6>@Name</h6>
-                        <span>12-Jan'23 12:00:00 PM</span>
-                    </div>
-                    <hr>
-                    <div class="comment-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi iste
-                        magni officia deleniti quisquam tempore, delectus eveniet corporis sequi molestiae magnam ad
-                        quod iusto aut omnis reiciendis velit nihil?
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="comment">
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="comments col-11">
-                    <div class="d-flex justify-content-between">
-                        <h6>@Name</h6>
-                        <span>12-Jan'23 12:00:00 PM</span>
-                    </div>
-                    <hr>
-                    <div class="comment-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi iste
-                        magni officia deleniti quisquam tempore, delectus eveniet corporis sequi molestiae magnam ad
-                        quod iusto aut omnis reiciendis velit nihil?
+        <ng-container *ngFor="let comment of comments">
+            <div class="comment">
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="comments col-11">
+                        <div class="d-flex justify-content-between">
+                            <h6>@ {{ comment.userName }} </h6>
+                            <span> {{ comment.postedTime }} </span>
+                        </div>
+                        <hr>
+                        <div class="comment-body"> {{ comment.comment }} </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="comment">
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="comments col-11">
-                    <div class="d-flex justify-content-between">
-                        <h6>@Name</h6>
-                        <span>12-Jan'23 12:00:00 PM</span>
-                    </div>
-                    <hr>
-                    <div class="comment-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi iste
-                        magni officia deleniti quisquam tempore, delectus eveniet corporis sequi molestiae magnam ad
-                        quod iusto aut omnis reiciendis velit nihil?
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="comment">
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="comments col-11">
-                    <div class="d-flex justify-content-between">
-                        <h6>@Name</h6>
-                        <span>12-Jan'23 12:00:00 PM</span>
-                    </div>
-                    <hr>
-                    <div class="comment-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi iste
-                        magni officia deleniti quisquam tempore, delectus eveniet corporis sequi molestiae magnam ad
-                        quod iusto aut omnis reiciendis velit nihil?
-                    </div>
-                </div>
-            </div>
-        </div>
+        </ng-container>
     </div>
 </div>
