--- a/src/app/posts/full-post/full-post.component.html
+++ b/src/app/posts/full-post/full-post.component.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-3">
                         <button class="primary">Submit</button>
                     </div>
                 </div>
