posts comments section design improvement

--- a/src/app/posts/post-card/post-card.component.scss
+++ b/src/app/posts/post-card/post-card.component.scss
@@ -1,1 +1,6 @@
-@import "../posts.component.scss"
+@import "../posts.component.scss";
+
+.internal {
+    box-shadow: unset;
+    min-height: unset;
+}
