form submission and logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">लोक जिज्ञासा वेलफेयर सोसाइटी</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="#">लोक जिज्ञासा वेलफेयर सोसाइटी</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -268,11 +268,12 @@
         <div class="row justify-content-center">
             <div class="col-lg-7 col-12">
                 <div class="image-wrapper">
-                    <img class="w-100" src="assets/images/mbr-1631x1058.jpg" alt="Mobirise Website Builder">
+                    <img class="w-100" src="assets/images/mbr-1631x1058.jpg" alt="लोक जिज्ञासा">
                 </div>
             </div>
-            <div class="col-lg-3 offset-lg-1 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TgaQ9ezcdqXOq9N/o/iDR6RinplVGQFEyYL25MBe6AsLk0oiYnXGFCYvU3b7x4QIt2AQ5FssxmeNpXMF5Lpg3dHbT6Rnoo2RhwOK0iWffl3iqHwkbex9xpp96wINkf1c">
+            <div class="col-lg-3 offset-lg-1 mbr/-form" data-form-type="formoid">
+                <form action="https://forms.gle/HNJSgXXRzLE6Tp6p9"  class="mbr-form form-with-styler" data-form-title="Form Name" target="_blank"><input type="hidden" name="email" data-form-email="true" value="TgaQ9ezcdqXOq9N/o/iDR6RinplVGQFEyYL25MBe6AsLk0oiYnXGFCYvU3b7x4QIt2AQ5FssxmeNpXMF5Lpg3dHbT6Rnoo2RhwOK0iWffl3iqHwkbex9xpp96wINkf1c">
+
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">धन्यवाद!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
